<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/id_edt_name"
        android:layout_marginTop="20dp"
        android:hint="@string/input_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/id_edt_password"
        android:hint="@string/input_password"/>

    <Button
        android:id="@+id/id_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:background="@color/top_background"/>

</LinearLayout>