<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/id_layout_account"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/settings_item_background_selector"
        android:padding="5dp"
        android:clickable="true">

        <Button
            android:id="@+id/id_imv_personIcon"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/icon_person_default"
            android:scaleType="fitXY"
            android:focusable="false"/>

        <TextView
            android:id="@+id/id_tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/id_imv_personIcon"
            android:gravity="center"
            android:text="@string/visitor"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@mipmap/a_5" />
    </RelativeLayout>

    <Button
        android:id="@+id/id_btn_version"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@mipmap/icon_check_version"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/settings_item_background_selector"
        android:text="@string/check_version" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="35dp"
        android:background="@color/divide_line" />

    <Button
        android:id="@+id/id_btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="10dp"
        android:drawableLeft="@mipmap/icon_feedback"
        android:drawablePadding="10dp"
        android:background="@drawable/settings_item_background_selector"
        android:gravity="center_vertical"
        android:text="@string/feedback" />


    <Button
        android:id="@+id/id_btn_about"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/settings_item_background_selector"
        android:drawableLeft="@mipmap/icon_about"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/about" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line" />
    <Button
        android:id="@+id/id_btn_exit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/settings_item_background_selector"
        android:drawableLeft="@mipmap/icon_exit"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/exit" />

</LinearLayout>